--- a/src/main/resources/templates/admin/pages/index.html
+++ b/src/main/resources/templates/admin/pages/index.html
@@ -5,15 +5,38 @@
 
 <body>
 
-<nav th:replace="/fragments/nav :: nav-admin"></nav>
+	<nav th:replace="/fragments/nav :: nav-admin"></nav>
 	<div class="container">
-		<div class="row">
-			<div class="col">
-				<h1> Admin Pages </h1>
-			</div>
+		<h1 class="display -2">Pages</h1>
+		<a href="/admin/pages/add" class="btn btn-primary mb-5">Add New </a>
+		
+		<div th:if="${message}" th:text="${message}" th:class="${'alert ' + alertClass}"></div>
+
+		<div th:if="${!pages.empty}">
+			<table class="table">
+				<tr>
+					<th>Title</th>
+					<th>Slug</th>
+					<th>Edit</th>
+					<th>Delete</th>
+				</tr>
+				<tr th:each="page: ${pages}">
+					<td th:text="${page.title}"></td>
+					<td th:text="${page.slug}"></td>
+					<td><a th:href="@{'/admin/pages/edit/' + ${page.id}}">Edit</a></td>
+					<td><a th:if="${page.slug != 'home'}" th:href="@{'/admin/pages/delete/' + ${page.id}}" class="confirmDeletion">Delete</a>
+					</td>
+				</tr>
+
+			</table>
 		</div>
+
+		<div th:unless="${!pages.empty}">
+			<h4 class="display-4"> There are no pages at the moment</h4>
+		</div>
+
 	</div>
- <div th:replace="/fragments/footer"></div>
+	<div th:replace=" /fragments/footer"></div>
 </body>
 
 </html>
