--- a/src/main/resources/templates/admin/categories/index.html
+++ b/src/main/resources/templates/admin/categories/index.html
@@ -5,8 +5,8 @@
   <body>
     <nav th:replace="/fragments/nav :: nav-admin"></nav>
     <div class="container">
-      <h1 class="display -2">Pages</h1>
-      <a href="/admin/pages/add" class="btn btn-primary mb-5">Add New </a>
+      <h1 class="display -2">Categories</h1>
+      <a href="/admin/categories/add" class="btn btn-primary mb-5">Add New </a>
 
       <div
         th:if="${message}"
@@ -14,25 +14,24 @@
         th:class="${'alert ' + alertClass}"
       ></div>
 
-      <div th:if="${!pages.empty}">
-        <table class="table sorting" id="pages">
+      <div th:if="${!categories.empty}">
+        <table class="table sorting" id="categories">
           <tr class="home">
-            <th>Title</th>
-            <th>Slug</th>
+            <th>Name</th>
             <th>Edit</th>
             <th>Delete</th>
           </tr>
-          <tr th:each="page: ${pages}"
-            th:id="'id_' + ${page.id}"
-            th:class="${page.slug}">
+          <tr th:each="category: ${categories}"
+            th:id="'id_' + ${category.id}"
+            >
           
-            <td th:text="${page.title}"></td>
-            <td th:text="${page.slug}"></td>
-            <td><a th:href="@{'/admin/pages/edit/' + ${page.id}}">Edit</a></td>
+            <td th:text="${category.name}"></td>
+           
+            <td><a th:href="@{'/admin/categories/edit/' + ${category.id}}">Edit</a></td>
             <td>
               <a
-                th:if="${page.slug != 'home'}"
-                th:href="@{'/admin/pages/delete/' + ${page.id}}"
+                
+                th:href="@{'/admin/categories/delete/' + ${category.id}}"
                 class="confirmDeletion"
                 >Delete</a
               >
@@ -41,18 +40,18 @@
         </table>
       </div>
 
-      <div th:unless="${!pages.empty}">
-        <h4 class="display-4">There are no pages at the moment</h4>
+      <div th:unless="${!categories.empty}">
+        <h4 class="display-4">There are no categories at the moment</h4>
       </div>
     </div>
     <div th:replace=" /fragments/footer"></div>
     <script>
-      $("table#pages tbody").sortable({
+      $("table#categories tbody").sortable({
         items: "tr:not(.home)",
         placeholder: "ui-state-highlight",
         update: function () {
-          let ids = $("table#pages tbody").sortable("serialize");
-          let url = "/admin/pages/reorder";
+          let ids = $("table#categories tbody").sortable("serialize");
+          let url = "/admin/categories/reorder";
           $.post(url, ids, function (data) {
             console.log(data);
           });
