--- a/src/main/resources/templates/admin/pages/index.html
+++ b/src/main/resources/templates/admin/pages/index.html
@@ -5,7 +5,7 @@
   <body>
     <nav th:replace="/fragments/nav :: nav-admin"></nav>
     <div class="container">
-      <h1 class="display -2">Pages</h1>
+      <h1 class="display -2">Admin Pages</h1>
       <a href="/admin/pages/add" class="btn btn-primary mb-5">Add New </a>
 
       <div
@@ -29,14 +29,8 @@
             <td th:text="${page.title}"></td>
             <td th:text="${page.slug}"></td>
             <td><a th:href="@{'/admin/pages/edit/' + ${page.id}}">Edit</a></td>
-            <td>
-              <a
-                th:if="${page.slug != 'home'}"
-                th:href="@{'/admin/pages/delete/' + ${page.id}}"
-                class="confirmDeletion"
-                >Delete</a
-              >
-            </td>
+            <td><a th:if="${page.slug != 'home'}" th:href="@{'/admin/pages/delete/' + ${page.id}}"
+                class="confirmDeletion">Delete</a></td>
           </tr>
         </table>
       </div>
