--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" th:fragment="nav-front">
-    <a class="navbar-brand" href="/">From NAV HTML</a>
+    <a class="navbar-brand" href="/">Shopping cart</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
         aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -7,9 +7,9 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active" th:each="page: ${cpages}"  th:if="${page.slug != 'home'}">
-                <a class="nav-link" th:href="@{'/' + ${page.slug}}" th:text="${page.title}"></a>
+       <ul class="navbar-nav mr-auto">
+            <li class="nav-item active" th:each="page: ${cpages}" th:if="${page.slug != 'home'}" >
+                <a  class="nav-link" th:href="@{'/' + ${page.slug}}" th:text="${page.title}"></a>
             </li>
         </ul>
 
@@ -28,7 +28,7 @@
 </nav>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" th:fragment="nav-admin">
-    <a class="navbar-brand" href="/" target="_blank">Home Page</a>
+    <a class="navbar-brand" href="/" target="_blank">Admin shopping shopping</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
         aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
