--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -26,12 +26,15 @@
 
 						<p th:text="'$' + ${product.price}"></p>
 
-						<div>
+						<div style="position:relative;">
 							<p>
-								<a href="#"> Add to cart</a>
-
+								<a class="btn btn-primary addToCart" th:attr="data-id=${product.id}" 
+								th:href="@{'/cart/add/' + ${product.id}}"> Add to cart</a>
+                              <img class="ajaxLoader d-none" src="/images/ajax-loader.gif">
 							</p>
-
+							
+							<div class ="btn btn-sm btn-success hide productAdded">Product Added!</div>
+							
 						</div>
 
 					</div>
