--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -28,13 +28,13 @@
 
 						<div style="position:relative;">
 							<p>
-								<a class="btn btn-primary addToCart" th:attr="data-id=${product.id}" 
-								th:href="@{'/cart/add/' + ${product.id}}"> Add to cart</a>
-                              <img class="ajaxLoader d-none" src="/images/ajax-loader.gif">
+								<a class="btn btn-primary addToCart" th:attr="data-id=${product.id}"
+									th:href="@{'/cart/add/' + ${product.id}}"> Add to cart</a>
+								<img class="ajaxLoader d-none" src="/images/ajax-loader.gif">
 							</p>
-							
-							<div class ="btn btn-sm btn-success hide productAdded">Product Added!</div>
-							
+
+							<div class="btn btn-sm btn-success hide productAdded">Product Added!</div>
+
 						</div>
 
 					</div>
@@ -62,6 +62,31 @@
 		</div>
 	</div>
 	<div th:replace="/fragments/footer"></div>
+	<script>
+
+		$("a.addToCart").click(function (e) {
+			e.preventDefault();
+
+			let $this = $(this);
+
+			$this.next().removeClass('d-none');
+
+			let id = $this.attr("data-id");
+			let url = "/cart/add/" + id;
+
+			$.get(url, {}, function (data) {
+				$('div.cart').html(data);
+			}).done(function () {
+				$this.parent().parent().find('div.productAdded').fadeIn();
+				$this.next().addClass('d-none');
+				setTimeout(() => {
+					$this.parent().parent().find('div.productAdded').fadeOut();
+				}, 1000);
+			});
+		});
+
+	</script>
+
 </body>
 
 </html>
