--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -15,10 +15,10 @@
 
         <ul class="float-right navbar-nav" th:if="${principal == null}">
             <li class="nav-item active">
-                <a th:href="@{/register}" class="nav-link">Register</a>
+                <a th:href="@{/register}" class="nav-link">.</a>
             </li>
             <li class="nav-item active">
-                <a th:href="@{/login}" class="nav-link">Login</a>
+                <a th:href="@{/login}" class="nav-link">Log-out</a>
             </li>
         </ul>
 
