worked on home page

--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -2,16 +2,56 @@
 <html lang="en">
 
 <head th:replace="/fragments/head"></head>
-
+<link rel="stylesheet" th:href ="@{/css/index.css}">
 <body>
 
 <nav th:replace="/fragments/nav :: nav-front"></nav>
 	<div class="container-fluid mt-5">
 		<div class="row">
 			<div th:replace = "/fragments/categories"></div>
-			<div class="col"></div>
-            <div class="col-7" th:utext="${page.content}">hello</div>
-            <div class="col"></div>
+			
+			
+						
+            <h1 class="h1">MY</h1>
+            
+      
+            <div class="image-grid" >
+            
+		<div class="img1">  	<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;"th:src="@{images/beauty.jpg}"/> </div>
+				
+		<div class="img2">		<img style="width:200px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;"th:src="@{images/baby.jpg}"/></div>
+		<div class="img3">	    <img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;"th:src="@{images/lovely.jpg}"/></div>
+		<div class="img4">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;"th:src="@{images/missyou.jpg}"/></div>
+		<div class="img5">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;"th:src="@{images/twindogs.jpg}"/></div>
+		<div class="img6">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;"th:src="@{images/thumb-Adelie-Penguin-1.jpg}"/></div>
+		<div class="img7">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;" th:src="@{images/Cute_dog.jpg}"/></div>
+		<div class="img9">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;"th:src="@{images/thumb-Northern-Rockhopper-Penguin.jpg}"/></div>
+		<div class="img10">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;" th:src="@{images/nighttime.webp} "/></div>
+  <div class="img11">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;" th:src="@{images/blue.jpg} "/></div>
+  <div class="img12">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;" th:src="@{images/highfive.jpg} "/></div>
+  <div class="img13">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;" th:src="@{images/sir.jpg} "/></div>
+  <div class="img14">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;" th:src="@{images/romeo.jpg} "/></div>
+  <div class="img15">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;" th:src="@{images/fly.jpg} "/></div>
+  <div class="img16">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;" th:src="@{images/friends.jpg} "/></div>
+  <div class="img17">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;" th:src="@{images/splash.jpg} "/></div>
+            <div class="col"> </div>
+            
 		</div>
 	</div>
  <div th:replace="/fragments/footer"></div>
