--- a/src/main/resources/templates/admin/pages/index.html
+++ b/src/main/resources/templates/admin/pages/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head th:replace="/fragments/head"></head>
-
+<link rel="stylesheet" th:href ="@{/css/body.css}">
   <body>
     <nav th:replace="/fragments/nav :: nav-admin"></nav>
     <div class="container">
