--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,8 +21,7 @@
                  class="icon-bar"></span> <span class="icon-bar"></span> <span
                  class="icon-bar"></span>
            </button>
-           <a class="navbar-brand" href="#" th:href="@{/}">Registration and
-              Login Module</a>
+           <a class="navbar-brand" href="#" th:href="@{/}">LIL AMAZON</a>
         </div>
      </div>
   </nav>
@@ -30,7 +29,8 @@
   <br>
 
   <div class="container">
-
+  
+  
      <div class="row">
         <div class="col-md-6 col-md-offset-3">
            <h1>Login page</h1>
