worked on home page

--- a/src/main/resources/templates/fragments/categories.html
+++ b/src/main/resources/templates/fragments/categories.html
@@ -1,4 +1,7 @@
-<div class="col-3" th:fragment="categories">
+
+<link rel="stylesheet" th:href ="@{/css/index.css}">
+<div class="col-3"
+ th:fragment="categories">
     <h3 class="display-4">Categories</h3>
     <ul class="list-group">
         <li class="list-group-item">
@@ -11,3 +14,4 @@
 
    <div th:replace = "/fragments/cart_partial"> </div>
 </div>
+
