--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -5,75 +5,86 @@ body{
 background-color: pink;
 background-size: cover;
 }
+li.list-group-item{
+border-radius:0%;
+background-color: aqua;
+margin-left:5%;
+width:50%;
+ height: 50px;
+ box-shadow: #222;
+}
 
-
+li.list-group-item:hover{
+   transform: scale(1.1);
+  border-radius: 5%;
+}
 
 
 .img1{
 border-radius:30%;
 }
 .img1:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img2:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img3:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img4:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img5:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img6:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img7:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img9:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img10:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img11:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img12:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img13:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img14:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img15:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img16:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .img17:hover{
-   transform: scale(1.5);
+   transform: scale(1.3);
   border-radius: 50%;
 }
 .image-grid {
@@ -83,15 +94,17 @@ border-radius:30%;
   height: 100px;
   width: 1200px;
   float: right;
-  padding-left:45px;
-  padding-top:100px;
+  padding-right:50px;
+  padding-top:50px;
  
 }
 .h1{
-padding-bottom:350px;
-padding-left:100px;
+padding-bottom:10px;
+padding-right:50px;
+ text-align: center;
 font-size: 3.25em;
- color: white;
+ color: purple;
+ font-family:Snell Roundhand, cursive;
  
  right: 50%;
 }
