--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" th:fragment="nav-front">
-    <a class="navbar-brand" href="/">Shopping cart</a>
+    <a class="navbar-brand" href="/">Captured Moments</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
         aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -9,16 +9,18 @@
 
        <ul class="navbar-nav mr-auto">
             <li class="nav-item active" th:each="page: ${cpages}" th:if="${page.slug != 'home'}" >
-                <a  class="nav-link" th:href="@{'/' + ${page.slug}}" th:text="${page.title}"></a>
+                
             </li>
         </ul>
 
         <ul class="float-right navbar-nav" th:if="${principal == null}">
             <li class="nav-item active">
-                <a th:href="@{/register}" class="nav-link">.</a>
+            <a th:href="@{/admin/pages}" class="nav-link" >Admin</a>
+                <a th:href="@{/register}" class="nav-link"></a>
             </li>
             <li class="nav-item active">
                 <a th:href="@{/login}" class="nav-link">Log-out</a>
+                
             </li>
         </ul>
 
@@ -28,7 +30,7 @@
 </nav>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" th:fragment="nav-admin">
-    <a class="navbar-brand" href="/" target="_blank">Admin shopping shopping</a>
+    <a class="navbar-brand" href="/" target="_blank">Admin shopping </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
         aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -36,6 +38,10 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+                <a th:href="@{/home}" class="nav-link">Home</a>
+                
+            </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/admin/pages">Pages</a>
             </li>
@@ -45,6 +51,8 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/admin/products">Products</a>
             </li>
+            
+           
 
         </ul>
 
