--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -6,16 +6,19 @@
 <body>
 
 <nav th:replace="/fragments/nav :: nav-front"></nav>
+
+<h1 class="h1">Captured Moments</h1>
 	<div class="container-fluid mt-5">
 		<div class="row">
 			<div th:replace = "/fragments/categories"></div>
 			
 			
 						
-            <h1 class="h1">MY</h1>
+            
             
       
             <div class="image-grid" >
+            
             
 		<div class="img1">  	<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
   margin-top: 10px;"th:src="@{images/beauty.jpg}"/> </div>
