--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -15,7 +15,8 @@
 
         <ul class="float-right navbar-nav" th:if="${principal == null}">
             <li class="nav-item active">
-            <a th:href="@{/admin/pages}" class="nav-link" >Admin</a>
+            <a th:href="@{/admin/pages}" class="nav-link" sec:authorize="hasRole('ROLE_SUPER')"
+            >Admin</a>
                 <a th:href="@{/register}" class="nav-link"></a>
             </li>
             <li class="nav-item active">
