--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css"
 		th:href="@{https://cdn.jsdelivr.net/webjars/org.webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" />
 
-<title>Registration</title>
+<title>Log-In</title>
 </head>
 <body>
 
@@ -21,7 +21,7 @@
                  class="icon-bar"></span> <span class="icon-bar"></span> <span
                  class="icon-bar"></span>
            </button>
-           <a class="navbar-brand" href="#" th:href="@{/}">LIL AMAZON</a>
+           <a class="navbar-brand" href="#" th:href="@{/}">remove</a>
         </div>
      </div>
   </nav>
@@ -33,7 +33,7 @@
   
      <div class="row">
         <div class="col-md-6 col-md-offset-3">
-           <h1>Login page</h1>
+           <h1>Login</h1>
            <form th:action="@{/login}" method="post">
               <div th:if="${param.error}">
                  <div class="alert alert-danger">Invalid username or
