worked on front-end

--- a/src/main/resources/templates/admin/categories/add.html
+++ b/src/main/resources/templates/admin/categories/add.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head th:replace="/fragments/head"></head>
-<link rel="stylesheet" th:href ="@{/css/body.css}">
+<link rel="stylesheet" th:href ="@{/css/admin.css}">
 <body>
 
 	<nav th:replace="/fragments/nav :: nav-admin"></nav>
