--- a/src/main/resources/static/css/body.css
+++ b/src/main/resources/static/css/body.css
@@ -1,26 +1,65 @@
 body{
  
- background-color:#ffecd3;
-  background-size: 85pc;
+ background-image: url(../media/birds.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+.row{
+
+
+ border: 0;
+  background: rgba(159, 99, 99, 0.4);
+  display: block;
+  margin: 10px auto;
+  text-align: center;
+  border: 3px solid black;
+  padding: 50px 10px;
+  width: 520px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.3px;
+  font-display: white;
+  padding-top: 30px
+  }
+ .row input[type="text"],
+.row input[type="password"] {
+  border: 0;
+  background: none;
+  display: block;
+  margin: 10px auto;
+  text-align: center;
+  border: 3px solid #0367fd;
+  padding: 14px 10px;
+  width: 220px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.3px;
+  font-display: white;
+}
+
+.row input[type="text"]:focus,
+.row input[type="password"]:focus {
+  width: 270px;
+  border-color: #ffc400ec;
+  color: white;
+}
+  
+
 
 .container{
-padding-top:100px;
-padding-right:50px;
-width: 2300px;
-
-border-radius: 20%;
-
-}
-.ui-sortable{
-
-background-color:aqua;
-border-collapse: collapse;
-border-radius: 50px;
-
+padding-top: 0px
 
 
 }
+
+input::placeholder {
+  color: white;
+}
+
+
 
 
 
