--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -5,19 +5,7 @@ body{
 background-color: pink;
 background-size: cover;
 }
-li.list-group-item{
-border-radius:0%;
-background-color: aqua;
-margin-left:5%;
-width:50%;
- height: 50px;
- box-shadow: #222;
-}
 
-li.list-group-item:hover{
-   transform: scale(1.1);
-  border-radius: 5%;
-}
 
 
 .img1{
@@ -98,6 +86,20 @@ border-radius:30%;
   padding-top:50px;
  
 }
+li.list-group-item{
+border-radius:0%;
+background-color: aqua;
+margin-left:5%;
+width:50%;
+ height: 50px;
+ box-shadow: #222;
+ 
+}
+
+li.list-group-item:hover{
+   transform: scale(1.1);
+  border-radius: 5%;
+}
 .h1{
 padding-bottom:10px;
 padding-right:50px;
@@ -107,5 +109,17 @@ font-size: 3.25em;
  font-family:Snell Roundhand, cursive;
  
  right: 50%;
+}
+
+.col-3{
+
+font-family:Snell Roundhand, cursive;
+color: purple;
+}
+.col-8{
+
+font-family:Snell Roundhand, cursive;
+color: purple;
+
 }
 
