--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" type="text/css"
 		th:href="@{https://cdn.jsdelivr.net/webjars/org.webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" />
-
+<link rel="stylesheet" th:href ="@{/css/body.css}">
 <title>Log-In</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
                  class="icon-bar"></span> <span class="icon-bar"></span> <span
                  class="icon-bar"></span>
            </button>
-           <a class="navbar-brand" href="#" th:href="@{/}">remove</a>
+           <a class="navbar-brand" href="#" th:href="@{/}"></a>
         </div>
      </div>
   </nav>
@@ -53,7 +53,7 @@
                     placeholder="Password" />
               </div>
               <div class="form-group">
-                 <div class="row">
+                 <div class="row1">
                     <div class="col-sm-6 col-sm-offset-3">
                        <input type="submit" name="login-submit" id="login-submit"
                           class="form-control btn btn-primary" value="Log In" />
