--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -10,7 +10,7 @@
 		th:href="@{https://cdn.jsdelivr.net/webjars/org.webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" />
 
 	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
-
+<link rel="stylesheet" th:href ="@{/css/registration.css}">
 	<title>User Registration</title>
 </head>
 
@@ -23,8 +23,7 @@
 					<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span> <span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#" th:href="@{/}">Registration and
-					Login Module</a>
+				<a class="navbar-brand" href="#" th:href="@{/}"></a>
 			</div>
 		</div>
 	</nav>
@@ -32,7 +31,7 @@
 	<br>
 	<br>
 
-	<div class="container">
+	<div class="container1">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 
