--- a/src/main/resources/templates/admin/pages/index.html
+++ b/src/main/resources/templates/admin/pages/index.html
@@ -18,7 +18,7 @@
         <table class="table sorting" id="pages">
           <tr class="home">
             <th>Title</th>
-            <th>Slug</th>
+            <th>Name</th>
             <th>Edit</th>
             <th>Delete</th>
           </tr>
