--- a/src/main/resources/templates/admin/pages/add.html
+++ b/src/main/resources/templates/admin/pages/add.html
@@ -20,8 +20,8 @@
 				<span class="error" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
 			</div>
 			<div class="form-group">
-				<label for="">Slug</label>
-				<input type="text" class="form-control" th:field="*{slug}" placeholder="Slug">
+				<label for="">Name</label>
+				<input type="text" class="form-control" th:field="*{slug}" placeholder="Name">
 
 			</div>
 			<div class="form-group">
