--- a/src/main/resources/templates/admin/pages/edit.html
+++ b/src/main/resources/templates/admin/pages/edit.html
@@ -20,8 +20,8 @@
 				<span class="error" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
 			</div>
 			<div class="form-group" th:classappend="${page.slug == 'home'} ? 'd-none' : ''">
-				<label for="">Slug</label>
-				<input type="text" class="form-control" th:field="*{slug}"  th:value="${page.slug}" placeholder="Slug">
+				<label for="">Name</label>
+				<input type="text" class="form-control" th:field="*{slug}"  th:value="${page.slug}" placeholder="Name">
 
 			</div>
 			<div class="form-group">
