--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" type="text/css"
 		th:href="@{https://cdn.jsdelivr.net/webjars/org.webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" />
-<link rel="stylesheet" th:href ="@{/css/body.css}">
+<link rel="stylesheet" th:href ="@{css/body.css}">
 <title>Log-In</title>
 </head>
 <body>
