--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -98,6 +98,10 @@
 						<span>Already registered? <a href="/" th:href="@{/login}">Login
 								here</a></span>
 					</div>
+					
+					<div class="img20">		<img style="width:250px; border-radius: 10px;border: 3px solid aqua;
+  margin-top: 10px;" th:src="@{images/200.gif} "/></div>
+            <div class="col"> </div>
 
 				</form>
 			</div>
